Fixing alignment of filter modulation option in mobile viewport

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -333,6 +333,10 @@ input.note:focus {
     width: 100%;
   }
 
+  .waveformOptionsContainer {
+    width: 100%;
+  }
+
   .annotated-input {
     width: 100%;
   }
